--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yadu Krishnan</title>
     <link rel="stylesheet" href="styles.css">
+    <script type="text/javascript" src="https://livejs.com/live.js"></script>
 </head>
 <body styles="font-family: Mona Sans">
     <div class="box">
