--- a/index.html
+++ b/index.html
@@ -56,19 +56,20 @@
         <div class="discordBlock">
             <span class="discord-text">Discord</span><span style="font-size: 3em";>:</span>
             <br>
-            oat#3633
+            <span style="font-size: 1.5em">oat#3633</span>
         </div>
         <br>
         <div class="linkedinBlock">
-            <span class="linkedin-text" style="color: rgb(241, 168, 100)">LinkedIn</span>:
+            <span class="linkedin-text" style="color: rgb(241, 168, 100)">LinkedIn</span><span style="font-size: 3em";>:</span>
             <br>
-            https://www.linkedin.com/in/yadu-tv/
+            <span style="font-size: 1.5em">https://www.linkedin.com/in/yadu-tv/</span>
+            
         </div>
         <br>
         <div class="twitterBlock">
-            <span class="twitter-text" style="color: rgb(241, 168, 100)">Twitter</span>:
+            <span class="twitter-text" style="color: rgb(241, 168, 100)">Twitter</span><span style="font-size: 3em";>:</span>
             <br>
-            https://www.twitter.com/yadukrishnantv/
+            <span style="font-size: 1.5em">https://www.twitter.com/yadukrishnantv/</span>
         </div>
     </div>
 </body>
