changes to the padding and margin of the whole page

--- a/index.html
+++ b/index.html
@@ -50,26 +50,26 @@
         <br>
     </div>
     <div class="social">
-        <p style="margin-left: 10px">
+        <p style="margin-left: 10px; margin-right: 10px">
             Get in touch with me over:
         </p>
         <div class="discordBlock">
             <span class="discord-text">Discord</span><span style="font-size: 3em";>:</span>
             <br>
-            <span style="font-size: 1.5em">oat#3633</span>
+            <span style="font-size: 5vw">oat#3633</span>
         </div>
         <br>
         <div class="linkedinBlock">
             <span class="linkedin-text" style="color: rgb(241, 168, 100)">LinkedIn</span><span style="font-size: 3em";>:</span>
             <br>
-            <span style="font-size: 1.5em">https://www.linkedin.com/in/yadu-tv/</span>
+            <span style="font-size: 5vw">https://www.linkedin.com/in/yadu-tv/</span>
             
         </div>
         <br>
         <div class="twitterBlock">
             <span class="twitter-text" style="color: rgb(241, 168, 100)">Twitter</span><span style="font-size: 3em";>:</span>
             <br>
-            <span style="font-size: 1.5em">https://www.twitter.com/yadukrishnantv/</span>
+            <span style="font-size: 5vw">https://www.twitter.com/yadukrishnantv/</span>
         </div>
     </div>
 </body>
