added nav bar and few other minor changed

--- a/index.html
+++ b/index.html
@@ -22,15 +22,27 @@
         AOS.init();
     </script>
 
+    <nav class="navbar">
+            <a class="home" href="home">Home</a>
+            <a class="about" href="about">About</a>
+            <a class="contact" href="contact">Contact</a>
+    </nav>
     <div class="name" data-aos="fade-in" data-aos-duration="2000">
-            <h1>
+            <h1 class="name-text">
                 Hi, I'm Yadu Krishnan! <img src="https://media.giphy.com/media/UaoxTrl8z1wre/giphy.gif" width="50"/>
             </h1>
+    </div>
+
+    <div class="scroll-downs">
+        <div class="mousey">
+          <div class="scroller"></div>
+        </div>
     </div>
 
     <div class="about-me">
         <h1 style="margin-left: 10px">A little about me:</h1>
     </div>
+    
     
     <div class="code-block">
         <p>
@@ -41,13 +53,14 @@
             <span style="padding-left: 20px">code: [<span style="color: rgb(241, 168, 100)">HTML</span>, <span style="color: rgb(241, 168, 100)">NodeJS</span>, <span style="color: rgb(241, 168, 100)">C</span>, <span style="color: rgb(241, 168, 100)">Cpp</span>, <span style="color: rgb(241, 168, 100)">Java</span>, <span style="color: rgb(241, 168, 100)">Python</span>, <span style="color: rgb(241, 168, 100)">MySql</span>] </span><br>
             <span style="padding-left: 20px">educational-experience: { </span><br>
             <span style="color: rgb(189, 159, 233); padding-left: 40px">highschool</span> (<span style="color: rgb(103, 144, 187)">2019-2021</span>): <span style="color: rgb(174, 213, 251)">"Sri Chaithanya Techno School, Bengaluru"</span>, <br>
-            <span style="color: rgb(189, 159, 233); padding-left: 40px">undergraduation</span> (current): <span style="color: rgb(103, 144, 187)">2019-2021</span>): <span style="color: rgb(174, 213, 251)">"Vellore Institute of Technology, Chennai"</span>, <br>
+            <span style="color: rgb(189, 159, 233); padding-left: 40px">undergraduation</span> (<span style="color: rgb(103, 144, 187)">current</span>): <span style="color: rgb(174, 213, 251)">"Vellore Institute of Technology, Chennai"</span> <br>
+            <span style="padding-left: 20px"></span>}
         </p>
     </div>
 
     <div class="social">
         <div class="social-linkedin">
-            <a href="https://www.linkedin.com/yadu-tv/"><i class="fa-brands fa-4x fa-linkedin-in"></i></a>
+            <a href="https://www.linkedin.com/in/yadu-tv/"><i class="fa-brands fa-4x fa-linkedin-in"></i></a>
         </div>
         <div class="social-email">
             <a href="mailto: yaduk.tv@gmail.com"><i class="fa-solid fa-4x fa-envelope"></i></a>
@@ -59,8 +72,3 @@
 </body>
 
 </html>
-
-<!-- 
-    <img src="https://media.giphy.com/media/qFrWCKBNGdH4IT1iNe/giphy.gif" align="right" width="250" />    
-    <img src="https://media.giphy.com/media/O1OY9qvJQqzcwtwoor/giphy.gif" align="right" width="250" />
- -->
