added links to navigation buttons, changed bio, and added github logo to the socials menu

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
     </script>
 
     <nav class="navbar">
-            <a class="home" href="home">Home</a>
-            <a class="about" href="about">About</a>
-            <a class="contact" href="contact">Contact</a>
+            <a class="home" href="#name">Home</a>
+            <a class="about" href="#about-me">About</a>
+            <a class="contact" href="#social">Contact</a>
     </nav>
-    <div class="name" data-aos="fade-in" data-aos-duration="2000">
+    <div class="name" id="name" data-aos="fade-in" data-aos-duration="2000">
             <h1 class="name-text">
                 Hi, I'm Yadu Krishnan! <img src="https://media.giphy.com/media/UaoxTrl8z1wre/giphy.gif" width="50"/>
             </h1>
@@ -39,34 +39,31 @@
         </div>
     </div>
 
-    <div class="about-me">
-        <h1 style="margin-left: 10px">A little about me:</h1>
-    </div>
-    
-    
-    <div class="code-block">
-        <p>
-            <span style="color: rgb(200, 111, 103)">def</span> <span style="color: rgb(189, 159, 233)">me</span>(): <br>
-            <span style="padding-left: 20px">pronouns: he | him </span><br>
-            <span style="padding-left: 20px">age: <span style="color: rgb(103, 144, 187)">19</span></span><br>
-            <span style="padding-left: 20px">speak: [<span style="color: rgb(241, 168, 100)">Malayalam</span>, <span style="color: rgb(241, 168, 100)">English</span>, <span style="color: rgb(241, 168, 100)">Tamil</span>, <span style="color: rgb(241, 168, 100)">Hindi</span>] </span><br>
-            <span style="padding-left: 20px">code: [<span style="color: rgb(241, 168, 100)">HTML</span>, <span style="color: rgb(241, 168, 100)">NodeJS</span>, <span style="color: rgb(241, 168, 100)">C</span>, <span style="color: rgb(241, 168, 100)">Cpp</span>, <span style="color: rgb(241, 168, 100)">Java</span>, <span style="color: rgb(241, 168, 100)">Python</span>, <span style="color: rgb(241, 168, 100)">MySql</span>] </span><br>
-            <span style="padding-left: 20px">educational-experience: { </span><br>
-            <span style="color: rgb(189, 159, 233); padding-left: 40px">highschool</span> (<span style="color: rgb(103, 144, 187)">2019-2021</span>): <span style="color: rgb(174, 213, 251)">"Sri Chaithanya Techno School, Bengaluru"</span>, <br>
-            <span style="color: rgb(189, 159, 233); padding-left: 40px">undergraduation</span> (<span style="color: rgb(103, 144, 187)">current</span>): <span style="color: rgb(174, 213, 251)">"Vellore Institute of Technology, Chennai"</span> <br>
-            <span style="padding-left: 20px"></span>}
+    <div class="about-me" id="about-me">
+        <h1>A little about me:</h1>
+        <br>
+        <p class="about-me-data">
+            I am a 19-year-old second-year Computer Science student studying at VIT Chennai.
+            I'm currently working towards graduation in 2025, and I'm passionate about technology.
+            As a programmer, I have experience in several programming languages, including Python, HTML, CSS, Java, Nodejs, and MySQL.
+            While I love working with technology in general, my primary focus is on web development.
+            Although I'm still learning, I find it fascinating to create websites and improve their functionality.
+            I'm also keen on learning how to develop apps for iOS.
         </p>
     </div>
 
-    <div class="social">
+    <div class="social" id="social">
         <div class="social-linkedin">
             <a href="https://www.linkedin.com/in/yadu-tv/"><i class="fa-brands fa-4x fa-linkedin-in"></i></a>
         </div>
-        <div class="social-email">
-            <a href="mailto: yaduk.tv@gmail.com"><i class="fa-solid fa-4x fa-envelope"></i></a>
-        </div>
         <div class="social-twitter-logo">
             <a href="https://www.twitter.com/yadukrishnantv/"><i class="fa-brands fa-4x fa-twitter"></i></a>
+        </div>
+        <div class="social-twitter-logo">
+            <a href="https://github.com/yadu-tv/"><i class="fa-brands fa-4x fa-github"></i></i></a>
+        </div>
+        <div class="social-email">
+            <a href="mailto: yaduk.tv@gmail.com"><i class="fa-solid fa-4x fa-envelope"></i></a>
         </div>
     </div>
 </body>
