added fade in effect to navbar

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         AOS.init();
     </script>
 
-    <nav class="navbar">
+    <nav class="navbar" data-aos="fade-in" data-aos-duration="2000">
             <a class="home" href="#name">Home</a>
             <a class="about" href="#about-me">About</a>
             <a class="contact" href="#social">Contact</a>
