--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#0E1116">
+    
     <title>Yadu Krishnan</title>
 
     <link rel="icon" href="https://media.giphy.com/media/aed6vzPudVaAZHA7sz/giphy.gif" type="image/gif" />
