--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 
     <link rel="icon" href="https://media.giphy.com/media/aed6vzPudVaAZHA7sz/giphy.gif" type="image/gif" />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     
