--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </nav>
     <div class="name" id="name" data-aos="fade-in" data-aos-duration="2000">
             <h1 class="name-text">
-                Hi, I'm Yadu Krishnan! <img src="https://media.giphy.com/media/UaoxTrl8z1wre/giphy.gif" width="50"/>
+                Hi, I'm Yadu Krishnan!
             </h1>
     </div>
 
@@ -47,7 +47,7 @@
         <h1>A little about me:</h1>
         <br>
         <p class="about-me-data">
-            I am a 19-year-old second-year Computer Science student studying at VIT Chennai.
+            I am a 19-year-old third-year Computer Science student studying at VIT Chennai.
             I'm currently working towards graduation in 2025, and I'm passionate about technology.
             As a programmer, I have experience in several programming languages, including Python, HTML, CSS, Java, Nodejs, and MySQL.
             While I love working with technology in general, my primary focus is on web development.
