--- a/index.html
+++ b/index.html
@@ -47,12 +47,9 @@
         <h1>A little about me:</h1>
         <br>
         <p class="about-me-data">
-            I am a 19-year-old third-year Computer Science student studying at VIT Chennai.
-            I'm currently working towards graduation in 2025, and I'm passionate about technology.
-            As a programmer, I have experience in several programming languages, including Python, HTML, CSS, Java, Nodejs, and MySQL.
-            While I love working with technology in general, my primary focus is on web development.
-            Although I'm still learning, I find it fascinating to create websites and improve their functionality.
-            I'm also keen on learning how to develop apps for iOS.
+            An ambitious Computer Science Engineering student specializing in Artificial Intelligence and Machine Learning, with a keen interest to apply theoretical knowledge into practical applications. 
+            Exhibits robust passion for machine learning complemented by an insatiable quest for continual learning.
+            Actively seeking an international internship opportunity to enhance technical skills, contribute to real-world projects, and gain hands-on industry experience.
         </p>
     </div>
 
